force-app/main/default/objects/Dealer_Summary_Variety__c/Dealer_Summary_Variety__c.object-meta.xml
<CustomObject>
    <label>Dealer Summary Variety</label>
    <nameField>
        <label>Dealer Summary Variety Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealer Summary Varieties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>