force-app/main/default/objects/Dealer_Summary_Variety__c/fields/CM_Amount__c.field-meta.xml
<CustomField>
    <fullName>CM_Amount__c</fullName>
    <label>CM Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>