force-app/main/default/objects/Dealer_Summary_Variety__c/fields/Dealer_Summary__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Summary__c</fullName>
    <label>Dealer Summary</label>
    <referenceTo>Dealer_Summary__c</referenceTo>
    <relationshipLabel>Dealer Summary Varieties</relationshipLabel>
    <relationshipName>Dealer_Summary_Varieties</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>