force-app/main/default/objects/Dealer_Summary_Variety__c/fields/Final_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Amount__c</fullName>
    <formula>IV_Amount__c + RP_Amount__c - CM_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>