force-app/main/default/objects/Dealer_Summary_Variety__c/fields/IV_Amount__c.field-meta.xml
<CustomField>
    <fullName>IV_Amount__c</fullName>
    <label>IV Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>