force-app/main/default/objects/Dealer_Summary_Variety__c/fields/Variety__c.field-meta.xml
<CustomField>
    <fullName>Variety__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variety</label>
    <referenceTo>Variedad__c</referenceTo>
    <relationshipLabel>Dealer Summary Varieties</relationshipLabel>
    <relationshipName>Dealer_Summary_Varieties</relationshipName>
    <type>Lookup</type>
</CustomField>